# My-Learning-Archive

./: .gitignore  README.md  notes_class.md
2048/: game.c  main.c  matrix.h  readme.md
GenericsVar/: generics.c  generics.h  test.c
LargeIntOperations/: bnum.h  readme.txt
LargeIntOperations/not_pure/: bnum.h
LinkedList/: generics.c  generics.h  linkedlist.c  linkedlist.h
LinkedList/for_int_only/: linkedlist.h  test.c
Vector/: generics.h  test.c  vector.h
Vector/legacy/: linkedlist.h  vector.c
notes/: basic__cpp.cpp  class__cpp.cpp  class__cpp_and_python.md  class__python.py  exception__cpp.cpp  exception__python.py  numpy.md  string_and_io__cpp.cpp
notes/Cpp/: exception__cpp.cpp
notes/Frontend/: css.md  js.md
notes/Frontend/dom_api/: index.html  script.js  style.css
notes/Python/: numpy.md
practices/2048/: game.h  main.py  matrix.c
practices/GenericsVar/: generics.h
practices/LargeIntOperations/: bnum.c  bnum.h  readme.md  test.c
practices/LargeIntOperations/not_pure/: bnum.c
practices/LinkedList/: test.c
practices/LinkedList/for_int_only/: linkedlist.c
practices/Snake/cpp_ver/: CMakeLists.txt  README.md  game.cpp  game.hpp  main.cpp  main.hpp  ui.cpp  ui.hpp
practices/Snake/cpp_ver/Eseq/: CMakeLists.txt  eseq.cpp  eseq.hpp
practices/Snake/cpp_ver/Kbinput/: CMakeLists.txt  kbinput.cpp  kbinput.hpp
practices/Snake/python_ver/: README.md  game.py  game_failed.py
practices/Vector/: vector.c
practices/Vector/legacy/: generics.c  test.c  vector.h
practices/_failed/CafeOrderingSystem/: README.md  backend.c  backend.h  frontend.c  (+12 more)
